[package]
name = "rust_graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bevy_input = "0.13.2"
bytemuck = "1.15.0"
env_logger = "0.11.3"
glam = "0.27.0"
log = "0.4.21"
obj-rs = "0.7.1"
pollster = "0.3.0"
wgpu = "0.19.3"
winit = "0.29.15"
